--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .container {
   width: 100%;
   max-width: 1400px;
   font-family: 'Roboto', sans-serif;
-
   margin:0 auto;
 }
+
 a {
   color: #08c;
   text-decoration: none;
 }
+
 .landing-section {
   position: relative;
   width: 100%;
@@ -26,8 +28,7 @@ a {
 .nav-link-items {
   display: flex;
   position: relative;
-  background-size: cover;
-  background:  url('../images/navbar.png') no-repeat ;
+  background: linear-gradient(#757675 50%, #676967 50%);
   margin: 0 auto;
   top: 20%;
   width: 70%;
@@ -35,21 +36,29 @@ a {
 }
 
 .nav-link-items ul {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
   height: 100%;
   width: 100%;
   list-style: none;
 }
+
 .nav-link-items ul li {
-  display: inline-block;
-  padding: 5px 3.5%;
-  color: #fff;
+  padding: 7px 3.9%;
 }
-.nav-link-items ul li:hover{
-  background-color: #666666;
-  border: 0;
+
+.nav-link-items ul li a {
+  color: #fff; 
 }
-.nav-link-items ul li:not(:first-child) {
-  border-left: 1px solid #424242;
+
+.nav-link-items ul li:not(:first-child){
+  border-left: 1px solid #636058;
+  
+}
+
+.nav-link-items ul li:hover {
+  background-color: #333330;
 }
 
 .nav-link-items .search-nav {
@@ -58,6 +67,7 @@ a {
   display: flex;
   align-items: center;
 }
+
 .nav-link-items .search-nav input{
   width: 90%;
   margin: 0 auto;
@@ -67,6 +77,7 @@ a {
   padding: 3px 5px;
   border-radius: 10px;
 }
+
 .nav-link-items .search-nav input:focus{
   background: #fff;
   outline: none;
@@ -78,7 +89,7 @@ a {
   flex-direction: column;
   width: 65%;
   margin: 0 auto;
-  top: 20%;
+  top: 25%;
   height: 50vh;
 }
 
@@ -105,12 +116,10 @@ a {
 .verse .text-content-link {
   padding-right: 1rem;
 }
+
 .verse .text-content-link:hover {
   border-bottom: 1px solid lightgrey;
 }
-
-
-
 
 .apple-products {
   display: flex;
@@ -121,6 +130,7 @@ a {
 .apple-products .product {
   flex: 1;
 }
+
 .fluid-img {
   max-width: 100%;
   height: auto;
@@ -137,7 +147,7 @@ a {
 
 }
 
-footer{
+footer {
   padding: 0 2rem;
   font-size: .8rem;
   margin-bottom: 1rem;
@@ -155,6 +165,7 @@ footer{
   border-left: 1px solid grey;
   padding-left: .4rem;
 }
+
 p.shopping-scenario a{
   text-decoration: none;
 
@@ -164,8 +175,9 @@ p.shopping-scenario a{
   text-decoration: none;
 }
 
-.copyright {
-  margin-left: 1.2rem;
+.copyright-container {
+  width: 95.8%;
+  margin: 0 auto;
 }
 
 .term-of-use {
