--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a {
   display: flex;
   font-size: 1.5rem;
   justify-content: center;
-  align-items: center!important;
+  align-items: center;
 }
 
 .material-icons {
